--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ header{
     background-position: center;
     height: auto;
     background-attachment: fixed;
+    min-height: 60px;
 }
 
 nav{
@@ -85,41 +86,57 @@ nav ul li a{
 
 .gallery-container{
     display:grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(2,1fr);
     grid-auto-rows: 150px;
-    padding: 20px;
-    gap: 10px;
+    padding: 100px 0;
+    gap: 40px;
+    max-width: 80%;
+    margin: auto;
 }
 
 .gallery__img{
     width: 100%;
     height: 100%;
     object-fit: cover;
+    /* transform: scale(1.15); */
+    transition: transform 0.5s , opacity 0.5s;
+    opacity: 0.8;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
-/* .gallery__title{
-    position: absolute;
-    bottom: 0;
-    color: white;
-    background: linear-gradient(rgba(255,255,255,1),rgba(0,0,0,1));
-    width: 100%;
-    margin: 0;
-    padding: 10px;
-} */
+.gallery__img:hover{
+   
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    transform: scale(1);
+    transition: 0.2s;
+    opacity: 1;
+}
 
-/* .gallery__item:nth-child(4){
+
+
+.gallery__item:nth-child(3){
     grid-column-start: span 2;
 }
+
 .gallery__item:nth-child(5){
     grid-row-start: span 2;
 }
+
+.gallery__item:nth-child(7){
+    grid-row-start: span 2;
+}
+
 .gallery__item:nth-child(9){
-    grid-column-start: span 2;
-} */
+    grid-row-start: span 2;
+}
+
 
 @media (min-width:768px){
     .gallery-container{
-        grid-template-columns:repeat(4,1fr);
+        grid-template-columns:repeat(3,1fr);
+        width: 90%;
+        margin: auto;
     }
     
     /* .gallery__item:nth-child(3){
@@ -134,27 +151,49 @@ nav ul li a{
     .gallery__item:nth-child(9){
         grid-column-start: span 3;
     }  */
+    .gallery__item:nth-child(1){
+        grid-column-start: span 2;
+    }
+    .gallery__item:nth-child(3){
+        grid-column-start: span 2;
+    }
+    .gallery__item:nth-child(4){
+        grid-row-start: span 2;
+    }
+    .gallery__item:nth-child(8){
+        grid-row-start: span 2;
+    }
 }
+
 
 @media (min-width:1024px){
     .gallery-container{
-        grid-template-columns:repeat(5,1fr);
+        grid-template-columns:repeat(4,1fr);
         width: 90%;
         margin: auto;
     }
     
-    .gallery__item:nth-child(1){
+    .gallery__item:nth-child(2){
         grid-column-start: span 2;
-        grid-column-start: span 2;
-    }
-    .gallery__item:nth-child(4){
-        grid-column-start: span 3;
-        grid-column-start: span 3;
-    }
-    .gallery__item:nth-child(5){
         grid-row-start: span 2;
     }
-    .gallery__item:nth-child(9){
-        grid-column-start: span 3;
+    .gallery__item:nth-child(4){
+        grid-column-start: span 1;
+        grid-row-start: span 1;
+    }
+    
+    .gallery__item:nth-child(6){
+        grid-column-start: span 2;
     } 
+}
+
+footer{
+    background:rgba(0, 0, 0, 0.80);
+    height: 90px;
+    color: white;
+    text-align: center;
+}
+
+footer p{
+    padding: 30px;
 }
