--- a/styles.css
+++ b/styles.css
@@ -10,16 +10,20 @@ body{
 }
 
 header{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.80),rgba(0, 0, 0, 0.80)),url("https://imgur.com/ANOwNL5.jpg");
     background-size: cover;
     background-position: center;
     height: auto;
     background-attachment: fixed;
     min-height: 60px;
+    transition: all .1s ease-in-out;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.253),rgb(0, 0, 0)),url("https://imgur.com/ANOwNL5.jpg");
+    animation:header 28s infinite linear;
 }
 
 nav{
     padding: 10px;
+    /* position: fixed; */
+    
 }
 nav ul{
     list-style: none;
@@ -69,6 +73,8 @@ nav ul li a{
       left:95%;
     }
 
+
+
 .hero{
     display: flex;
     flex-direction: column;
@@ -82,13 +88,41 @@ nav ul li a{
     text-align: center;
 }
 
+@keyframes header{
+    0%{
+        background-image: linear-gradient(rgba(0, 0, 0, 0.253),rgb(0, 0, 0)),url("https://imgur.com/ANOwNL5.jpg");
+    }
+    25%{
+        background-image: linear-gradient(rgba(0, 0, 0, 0.253),rgb(0, 0, 0)),url("https://imgur.com/ANOwNL5.jpg");
+    }
+    26%{
+        background-image: linear-gradient(rgba(0, 0, 0, 0.253),rgb(0, 0, 0)),url("https://imgur.com/sjkglaR.jpg");
+    }
+    50%{
+        background-image: linear-gradient(rgba(0, 0, 0, 0.253),rgb(0, 0, 0)),url("https://imgur.com/sjkglaR.jpg");
+    }
+    51%{
+        background-image: linear-gradient(rgba(0, 0, 0, 0.253),rgb(0, 0, 0)),url("https://imgur.com/VInU2yS.jpg");
+    }
+    75%{
+        background-image: linear-gradient(rgba(0, 0, 0, 0.253),rgb(0, 0, 0)),url("https://imgur.com/VInU2yS.jpg");
+    }
+    76%{
+        background-image: linear-gradient(rgba(0, 0, 0, 0.253),rgb(0, 0, 0)),url("https://imgur.com/0bI1u7Y.jpg");
+    }
+    100%{
+        background-image: linear-gradient(rgba(0, 0, 0, 0.253),rgb(0, 0, 0)),url("https://imgur.com/0bI1u7Y.jpg");
+    }
+    
+}
+
 /* main */
 
 .gallery-container{
     display:grid;
     grid-template-columns: repeat(2,1fr);
     grid-auto-rows: 150px;
-    padding: 100px 0;
+    padding: 200px 0;
     gap: 40px;
     max-width: 80%;
     margin: auto;
@@ -139,18 +173,7 @@ nav ul li a{
         margin: auto;
     }
     
-    /* .gallery__item:nth-child(3){
-        grid-column-start: span 2;
-    }
-    .gallery__item:nth-child(4){
-        grid-column-start: span 3;
-    }
-    .gallery__item:nth-child(5){
-        grid-row-start: span 2;
-    }
-    .gallery__item:nth-child(9){
-        grid-column-start: span 3;
-    }  */
+
     .gallery__item:nth-child(1){
         grid-column-start: span 2;
     }
@@ -197,3 +220,4 @@ footer{
 footer p{
     padding: 30px;
 }
+
